# FileTrim

./: 2026-04-24-assignment-﻿biostat-821.txt  README.md  pyproject.toml  test_cli.py  test_integration_pipeline.py
src/filetrim/: cli.py  file_types.py  models.py  orchestrator.py
src/filetrim/execution/: executor.py  planner.py
src/filetrim/extractor/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py  text_extractor.py
src/filetrim/naming/: builder.py  sanitizer.py  templates.py
src/filetrim/processing/: classifier.py  cleaner.py  signals.py
tests/: test_builder.py  test_classifier.py  test_cleaner.py  test_docx_extractor.py  test_executor.py  test_extractor_base.py  test_file_types.py  test_orchestrator.py  test_pdf_extractor.py  test_planner.py  test_sanitizer.py  test_signals.py  test_text_extractor.py
